# shadecore

./: Cargo.toml  README.md  README.txt  README2.md  build.rs  lasterror.txt  log.txt  shadecore-launch-instructions.txt  shadecore_pipeline_overview.txt
.github/workflows/: jekyll-gh-pages.yml
assets/: osc_mappings.example.json  output.json  output.linux.json  output.macos.json  output.windows.json  params.json  recording.json
assets/shaders/: default.frag  present.frag
crates/shadecore-cli/: Cargo.toml  build.rs
crates/shadecore-cli/src/: hotreload.rs  main.rs  validate.rs
crates/shadecore-engine/: Cargo.toml
crates/shadecore-engine/src/: assets.rs  config.rs  error.rs  events.rs  lib.rs
crates/shadecore-scratchpad/: Cargo.toml
crates/shadecore-scratchpad/src/: main.rs
docs/_docs/: 03-how-it-works.md  08-architecture.md  09-asset-json-mental-model.md  10-profiles-mental-model.md  11-state-ownership-and-authority.md  12-pipeline.md  12-runtime-architecture.md  13-engine-architecture.md  20-license.md
native/: syphon_bridge.h  syphon_bridge.m
native/spout2/SPOUTSDK/SpoutGL/: SpoutFrameCount.h
native/spout_bridge/: CMakeLists.txt  spout_bridge.cpp  spout_bridge.h
osc/: shadecore-OSC.maxpat
scripts/: build_syphon.sh
src/: logging.rs  main.rs  osc_introspection_helpers.rs  presenter.rs  recording.rs
src/output/: mod.rs  spout.rs
