[package]
name = "shadecore"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "0.16"
winit = "0.29"
glutin = "0.31"
glutin-winit = "0.4"
raw-window-handle = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

midir = "0.10"
anyhow = "1"

# Optional NDI output (requires NDI SDK installed; build with --features ndi)
# Using grafton-ndi 0.9.x API (PixelFormat/ScanType/VideoFrame builder, etc.)
grafton-ndi = { version = "0.9", optional = true }

[features]
default = []
ndi = ["dep:grafton-ndi"]

[build-dependencies]
cc = "1"
cmake = "0.1"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
libloading = "0.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(has_syphon)'] }
